added alien 101 website to portfolio

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <img src="./favicon.ico" alt="Favicon" id="header-img" /></a>
             <nav id="nav-bar">
                 <a href="#about" class="nav-link">ABOUT</a>
-                <a href="#our-service" class="nav-link">SKILLS</a>
-                <a href="#varieties" class="nav-link">PROJECTS</a>
-                <a href="https://lolisolera.github.io/CV/" class="nav-link">MY CV</a>
+                <a href="#skills" class="nav-link">SKILLS</a>
+                <a href="#projects" class="nav-link">PROJECTS</a>
+                <a href="https://lolisolera.github.io/CV/" class="nav-link">CV</a>
                 <a href="#contact" class="nav-link">CONTACT</a>
             </nav>
         </div>
@@ -36,7 +36,7 @@
             <div class="eye-grabber">
                 <h1>Hi, I'm Lola Marquez</h1>
                 <h2>
-                    Junior full-stack developer, and visual artist
+                    Junior full-stack developer, visual artist
                 </h2>
                 <button class="btn" onclick="window.location.href = '#about';">
                     Find out more
@@ -46,15 +46,21 @@
         <section id="about" class="sec-padding">
             <h3 class="section-heading">ABOUT ME</h3>
             <div class="sec-content-div flexible">
-                <p>Hi there! I'm a junior full-stack developer and visual artist in London, actively transitioning into a software engineering career. My creative passion extends beyond coding — I also enjoy making movies and performing visuals live using cutting-edge software.</p>
+                <p>Hi there! I'm a junior full-stack developer and visual artist in London, actively transitioning into
+                    a software engineering career. My creative passion extends beyond coding — I also enjoy making
+                    movies and performing visuals live using cutting-edge software.</p>
 
-                <p>Fueled by my enthusiasm for combining creativity with technology, I have been pursuing software development opportunities. This journey has culminated in the successful completion of a three-month coding course, elevating my skills to a professional level.</p>
-                    
-                <p>Presently engaged in the Software Development Skills Bootcamp at Just IT, I am dedicated to expanding my technical proficiency. Eager to contribute to a dynamic and innovative company, I'm actively seeking a junior role to further enhance my experience.</p>
+                <p>Fueled by my enthusiasm for combining creativity with technology, I've been pursuing software
+                    development opportunities. This journey has culminated in the successful completion of a three-month
+                    coding course, elevating my skills to a professional level.</p>
+
+                <p>Presently engaged in the Software Development Skills Bootcamp at Just IT, I'm dedicated to expanding
+                    my technical proficiency. Eager to contribute to a dynamic and innovative company, I'm actively
+                    seeking a junior role to further enhance my experience.</p>
             </div>
         </section>
 
-        <section id="our-service" class="sec-padding">
+        <section id="skills" class="sec-padding">
             <h3 class="section-heading">SKILLS</h3>
             <div class="sec-content-div">
                 <div class="bars">
@@ -146,61 +152,74 @@
             </div>
         </section>
 
-        <section id="varieties" class="sec-padding">
+        <section id="projects" class="sec-padding">
             <h3 class="section-heading">PROJECTS</h3>
             <div class="sec-content-div flexible">
                 <div class="tile">
-                    <a href="calculator/index.html"><img src="images/calculator.png" alt="screenshot of calculator app" /></a>
+                    <a href="calculator/index.html" target="_blank"><img src="images/calculator.png"
+                            alt="screenshot of calculator app" /></a>
                     <h4>Calculator</h4>
                     <p>
-                        Provides the basic functionality of a calculator through a simple UI. Users can input numbers, perform basic operations, and see the results on the display.
+                        Provides the basic functionality of a calculator through a simple UI. Users can input numbers,
+                        perform basic operations, and see the results on the display.
                     </p>
                     <p>&nbsp;</p>
-                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/calculator"><i class="fa-brands fa-github fa-xl"></i></a></p>
+                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/calculator" target="_blank"><i
+                                class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
-                    <a href="simon-game/index.html"><img src="images/simon-game.png" alt="screenshot of Simon game" /></a>
+                    <a href="simon-game/index.html"><img src="images/simon-game.png"
+                            alt="screenshot of Simon game" /></a>
                     <h4>Simon game</h4>
                     <p>
-                        Combines event handling, game logic, and UI animations. Players need to repeat the computer-generated color sequence to advanced levels.
+                        Combines event handling, game logic, and UI animations. Players need to repeat the
+                        computer-generated color sequence to advanced levels.
                     </p>
                     <p>&nbsp;</p>
-                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/Simon game"><i class="fa-brands fa-github fa-xl"></i></a></p>
+                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/simon-game" target="_blank"><i
+                                class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
                     <a href="dice-game/index.html"><img src="images/dice-game.png" alt="screenshot of dice game" /></a>
                     <h4>Dice game</h4>
                     <p>
-                        Simulates a simple two-player dice game where each player rolls a die, and the player with the higher number wins. The result is shown at the top.
+                        Simulates a simple two-player dice game where each player rolls a die, and the player with the
+                        higher number wins. The result is shown at the top.
                     </p>
                     <p>&nbsp;</p>
-                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/simon-game"><i class="fa-brands fa-github fa-xl"></i></a></p>
+                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/dice-game" target="_blank"><i
+                                class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
                     <a href="drum-kit/index.html"><img src="images/drum-kit.png" alt="screenshot of drum kit app" /></a>
                     <h4>Drum kit</h4>
                     <p>
-                        A virtual drum kit where users can either click on drum buttons or press corresponding keys to produce drum sounds and visual animations.
+                        A virtual drum kit where users can either click on drum buttons or press corresponding keys to
+                        produce drum sounds and visual animations.
                     </p>
                     <p>&nbsp;</p>
-                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/drum-kit"><i class="fa-brands fa-github fa-xl"></i></a></p>
+                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/drum-kit" target="_blank"><i
+                                class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
-                    <a href="tindog-website/index.html"><img src="images/tindog.png" alt="screenshot of tindog website" /></a>
+                    <a href="tindog-website/index.html" target="_blank"><img src="images/tindog.png"
+                            alt="screenshot of tindog website" /></a>
                     <h4>TinDog website</h4>
                     <p>
-                        A webpage for a fictional app called TinDog. This is a creative project that mimics a dating app but for dogs. It blends humour with modern design elements. 
+                        A webpage for a fictional app called TinDog. This is a creative project that mimics a dating app
+                        but for dogs. It blends humour with modern design elements.
                     </p>
                     <p>&nbsp;</p>
-                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/tindog-website"><i class="fa-brands fa-github fa-xl"></i></a></p>
+                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/tindog-website" target="_blank"><i
+                                class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
-                    <img src="https://i.ibb.co/BNFrnZn/golden.png" alt="photo of Golden Delicious apples" />
-                    <h4>Golden Delicious</h4>
+                    <a href="https://www.alien-101.co.uk/" target="_blank"><img src="images/alien101-website.png"
+                            alt="screenshot of Alien101 website" /></a>
+                    <h4>Alien101 website</h4>
                     <p>
-                        A variety with comparatively longer shelf life, it is crispy,
-                        juicy and has thick greenish-white flesh which turns golden upon
-                        ripening. It is available till January.
+                        A website showcasing my work as a visual artist. Built with Wordpress, it includes
+                        profile information and some of the videos and stills from past gigs.
                     </p>
                 </div>
             </div>
