added cv in pdf format

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#about" class="nav-link">ABOUT</a>
                 <a href="#skills" class="nav-link">SKILLS</a>
                 <a href="#projects" class="nav-link">PROJECTS</a>
-                <a href="https://lolisolera.github.io/CV/" class="nav-link">CV</a>
+                <a href="lola-marquez.pdf" target="_blank" class="nav-link">CV</a>
                 <a href="#contact" class="nav-link">CONTACT</a>
             </nav>
         </div>
