--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                         perform basic operations, and see the results on the display.
                     </p>
                     <p>&nbsp;</p>
-                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/calculator" target="_blank"><i
-                                class="fa-brands fa-github fa-xl"></i></a></p>
+                    <p class gitIcon><a href="https://github.com/Lolisolera/portfolio/tree/main/calculator"
+                            target="_blank"><i class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
                     <a href="simon-game/index.html"><img src="images/simon-game.png"
@@ -176,8 +176,8 @@
                         computer-generated color sequence to advanced levels.
                     </p>
                     <p>&nbsp;</p>
-                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/simon-game" target="_blank"><i
-                                class="fa-brands fa-github fa-xl"></i></a></p>
+                    <p class gitIcon><a href="https://github.com/Lolisolera/portfolio/tree/main/simon-game"
+                            target="_blank"><i class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
                     <a href="dice-game/index.html"><img src="images/dice-game.png" alt="screenshot of dice game" /></a>
@@ -187,8 +187,8 @@
                         higher number wins. The result is shown at the top.
                     </p>
                     <p>&nbsp;</p>
-                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/dice-game" target="_blank"><i
-                                class="fa-brands fa-github fa-xl"></i></a></p>
+                    <p class gitIcon><a href="https://github.com/Lolisolera/portfolio/tree/main/dice-game"
+                            target="_blank"><i class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
                     <a href="drum-kit/index.html"><img src="images/drum-kit.png" alt="screenshot of drum kit app" /></a>
@@ -198,8 +198,8 @@
                         produce drum sounds and visual animations.
                     </p>
                     <p>&nbsp;</p>
-                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/drum-kit" target="_blank"><i
-                                class="fa-brands fa-github fa-xl"></i></a></p>
+                    <p class gitIcon><a href="https://github.com/Lolisolera/portfolio/tree/main/drum-kit"
+                            target="_blank"><i class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
                     <a href="tindog-website/index.html" target="_blank"><img src="images/tindog.png"
@@ -210,8 +210,8 @@
                         but for dogs. It blends humour with modern design elements.
                     </p>
                     <p>&nbsp;</p>
-                    <p><a href="https://github.com/Lolisolera/portfolio/tree/main/tindog-website" target="_blank"><i
-                                class="fa-brands fa-github fa-xl"></i></a></p>
+                    <p class gitIcon><a href="https://github.com/Lolisolera/portfolio/tree/main/tindog-website"
+                            target="_blank"><i class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
                     <a href="https://www.alien-101.co.uk/" target="_blank"><img src="images/alien101-website.png"
