--- a/index.html
+++ b/index.html
@@ -60,94 +60,47 @@
             </div>
         </section>
 
+
         <section id="skills" class="sec-padding">
             <h3 class="section-heading">SKILLS</h3>
-            <div class="sec-content-div">
-                <div class="bars">
-                    <div class="icon-container">
-                        <img src="./images/html-5-logo.svg" alt="HTML" />
-                    </div>
-
-                    <div class="txt-container">
-                        <br>
-                        <br>
-
-                        <p>HTML</p>
+            <div class="sec-content-div flexible">
+                <div class="tile">
+                    <img src="images/html-5-logo.svg">
+                    <h4>HTML</h4>
 
 
-                    </div>
                 </div>
-                <div class="bars">
-                    <div class="icon-container">
-                        <img src="./images/css3-alt.svg" alt="CSS" />
-                    </div>
-                    <div class="txt-container">
-                        <br>
-                        <br>
+                <div class="tile">
+                    <img src="images/css3-alt.svg">
+                    <h4>CSS</h4>
 
-                        <p>CSS</p>
-
-                    </div>
                 </div>
-                <div class="bars">
-                    <div class="icon-container">
-                        <img class="javaScript" src="./images/js.svg" alt="JS" />
-                    </div>
-                    <div class="txt-container">
-                        <br>
-                        <br>
+                <div class="tile">
+                    <img src="images/js.svg">
+                    <h4>JavaScript</h4>
 
-                        <p>JavaScript</p>
-
-                    </div>
                 </div>
-                <div class="bars">
-                    <div class="icon-container">
-                        <img src="./images/node.svg" alt="Node" />
-                    </div>
-                    <div class="txt-container">
-                        <br>
-                        <br>
+                <div class="tile">
+                    <img src="images/node.svg">
+                    <h4>NodeJS</h4>
 
-                        <p>NodeJS</p>
-
-                    </div>
                 </div>
-                <div class="bars">
-                    <div class="icon-container">
-                        <img src="./images/python.svg" alt="Python" />
-                    </div>
-                    <div class="txt-container">
-                        <br>
-                        <br>
+                <div class="tile">
+                    <img src="images/python.svg">
 
+                    <h4>Python</h4>
 
-                        <p>Python</p>
-
-                    </div>
                 </div>
-                <div class="bars">
-                    <div class="icon-container">
-                        <img src="./images/database-solid.svg" alt="DB" />
-                    </div>
-                    <div class="txt-container">
-                        <br>
-                        <br>
+                <div class="tile">
+                    <img src="images/database-solid.svg">
+                    <h4>MySql</h4>
 
-                        <p>MySQL</p>
-
-                    </div>
                 </div>
-                <div class="bars">
-                    <div class="icon-container">
-                        <img src="./images/git.svg" alt="git" />
-                    </div>
-                    <div class="txt-container">
-                        <br>
-                        <br>
-                        <p>Git</p>
 
-                    </div>
+                <div class="tile">
+                    <img src="images/git.svg">
+                    <h4>Git</h4>
+
                 </div>
             </div>
         </section>
