styling tiles - skills section

--- a/index.html
+++ b/index.html
@@ -64,42 +64,48 @@
         <section id="skills" class="sec-padding">
             <h3 class="section-heading">SKILLS</h3>
             <div class="sec-content-div flexible">
-                <div class="tile">
+                <div class="tile skills">
                     <img src="images/html-5-logo.svg">
                     <h4>HTML</h4>
 
 
                 </div>
-                <div class="tile">
+                <div class="tile skills">
                     <img src="images/css3-alt.svg">
                     <h4>CSS</h4>
 
                 </div>
-                <div class="tile">
+                <div class="tile skills">
                     <img src="images/js.svg">
                     <h4>JavaScript</h4>
 
                 </div>
-                <div class="tile">
+                <div class="tile skills">
                     <img src="images/node.svg">
                     <h4>NodeJS</h4>
 
                 </div>
-                <div class="tile">
+                <div class="tile skills">
                     <img src="images/python.svg">
 
                     <h4>Python</h4>
 
                 </div>
-                <div class="tile">
+                <div class="tile skills">
                     <img src="images/database-solid.svg">
                     <h4>MySql</h4>
 
                 </div>
 
-                <div class="tile">
+                <div class="tile skills">
                     <img src="images/git.svg">
                     <h4>Git</h4>
+
+                </div>
+
+                <div class="tile skills">
+                    <img src="images/SQL-removebg-preview.png">
+                    <h4>SQL</h4>
 
                 </div>
             </div>
