styling skills tiles

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section id="skills" class="sec-padding">
             <h3 class="section-heading">SKILLS</h3>
             <div class="sec-content-div flexible">
-                <div class="tile skills">
+                <div class="tile-skills">
                     <img src="images/html-5-logo.svg">
                     <h4>HTML</h4>
 
