Skills section adjustments

--- a/index.html
+++ b/index.html
@@ -70,41 +70,41 @@
 
 
                 </div>
-                <div class="tile skills">
+                <div class="tile-skills">
                     <img src="images/css3-alt.svg">
                     <h4>CSS</h4>
 
                 </div>
-                <div class="tile skills">
-                    <img src="images/js.svg">
+                <div class="tile-skills">
+                    <img class="js" src="images/js.svg">
                     <h4>JavaScript</h4>
 
                 </div>
-                <div class="tile skills">
-                    <img src="images/node.svg">
+                <div class="tile-skills">
+                    <img class="node" src="images/node.svg">
                     <h4>NodeJS</h4>
 
                 </div>
-                <div class="tile skills">
+                <div class="tile-skills">
                     <img src="images/python.svg">
 
                     <h4>Python</h4>
 
                 </div>
-                <div class="tile skills">
+                <div class="tile-skills">
                     <img src="images/database-solid.svg">
                     <h4>MySql</h4>
 
                 </div>
 
-                <div class="tile skills">
-                    <img src="images/git.svg">
+                <div class="tile-skills">
+                    <img class="git" src="images/git.svg">
                     <h4>Git</h4>
 
                 </div>
 
-                <div class="tile skills">
-                    <img src="images/SQL-removebg-preview.png">
+                <div class="tile-skills">
+                    <img class="sql" src="images/SQL-removebg-preview.png">
                     <h4>SQL</h4>
 
                 </div>
