skills tiles fixed

--- a/index.html
+++ b/index.html
@@ -71,35 +71,35 @@
 
                 </div>
                 <div class="tile-skills">
-                    <img src="images/css3-alt.svg">
-                    <h4>CSS</h4>
+                    <img class="css" src="images/css3-alt.svg">
+                    <h4 class="css">CSS</h4>
 
                 </div>
                 <div class="tile-skills">
                     <img class="js" src="images/js.svg">
-                    <h4>JavaScript</h4>
+                    <h4 class="js">JavaScript</h4>
 
                 </div>
                 <div class="tile-skills">
                     <img class="node" src="images/node.svg">
-                    <h4>NodeJS</h4>
+                    <h4 class="node">NodeJS</h4>
 
                 </div>
                 <div class="tile-skills">
                     <img src="images/python.svg">
 
-                    <h4>Python</h4>
+                    <h4 class="python">Python</h4>
 
                 </div>
                 <div class="tile-skills">
-                    <img src="images/database-solid.svg">
+                    <img class="mySql" src="images/database-solid.svg">
                     <h4>MySql</h4>
 
                 </div>
 
                 <div class="tile-skills">
                     <img class="git" src="images/git.svg">
-                    <h4>Git</h4>
+                    <h4 class="git">Git</h4>
 
                 </div>
 
