--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="tile-skills">
                     <img class="mySql" src="images/database-solid.svg">
-                    <h4>MySql</h4>
+                    <h4>MySQL</h4>
 
                 </div>
 
