--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <h3 class="section-heading">SKILLS</h3>
             <div class="sec-content-div flexible">
                 <div class="tile-skills">
-                    <img src="images/html-5-logo.svg">
-                    <h4>HTML</h4>
+                    <img class="html" src="images/html-5-logo.svg">
+                    <h4 class="html">HTML</h4>
 
 
                 </div>
