--- a/index.html
+++ b/index.html
@@ -185,17 +185,31 @@
         </section>
 
 
-        <section class="sec-padding" id="contact">
-            <h3 class="section-heading">CONTACT</h3>
+        <section id="contact" class="sec-padding">
+            <h3 class="section-heading">Contact</h3>
             <div class="sec-content-div flexible">
-                <h6>If you want to get in touch, drop me an email:</h6>
-                <form id="form" action="mailto:lolisolera101@gmail.com" method="POST">
-                    <input type="email" name="email" id="email" placeholder="Your email address" required />
-                    <input type="submit" class="btn" id="submit" value="Say hello" />
 
-                </form>
+        <p>Get in touch using the form below:</p>
+
+    </div>
+    <div class="sec-content-div flexible">
+        <form action="https://formspree.io/f/xpzggllr" method="post">
+            <div class="form-group">
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="name" placeholder="Your name" required>
             </div>
-        </section>
+            <div class="form-group">
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" placeholder="Your email" required>
+            </div>
+            <div class="form-group">
+              <label for="message">Message:</label>
+              <textarea id="message" name="message" placeholder="Your message" required></textarea>
+            </div>
+            <input type="submit" value="Submit">
+          </form>
+        </div>
+</section>
     </main>
     <footer>
         Created by
