--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                 </div>
 
                 <div class="tile-skills">
-                    <img class="sql" src="images/SQL-removebg-preview.png">
-                    <h4>SQL</h4>
+                    <img class="replit" src="images/replit.svg">
+                    <h4 class="replit">Replit</h4>
 
                 </div>
             </div>
@@ -189,27 +189,27 @@
             <h3 class="section-heading">Contact</h3>
             <div class="sec-content-div flexible">
 
-        <p>Get in touch using the form below:</p>
+                <p>Get in touch using the form below:</p>
 
-    </div>
-    <div class="sec-content-div flexible">
-        <form action="https://formspree.io/f/xpzggllr" method="post">
-            <div class="form-group">
-              <label for="name">Name:</label>
-              <input type="text" id="name" name="name" placeholder="Your name" required>
             </div>
-            <div class="form-group">
-              <label for="email">Email:</label>
-              <input type="email" id="email" name="email" placeholder="Your email" required>
+            <div class="sec-content-div flexible">
+                <form action="https://formspree.io/f/xpzggllr" method="post">
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" placeholder="Your name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" placeholder="Your email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" placeholder="Your message" required></textarea>
+                    </div>
+                    <input type="submit" value="Submit">
+                </form>
             </div>
-            <div class="form-group">
-              <label for="message">Message:</label>
-              <textarea id="message" name="message" placeholder="Your message" required></textarea>
-            </div>
-            <input type="submit" value="Submit">
-          </form>
-        </div>
-</section>
+        </section>
     </main>
     <footer>
         Created by
