added replit projects

--- a/index.html
+++ b/index.html
@@ -181,6 +181,33 @@
                         profile information and some of the videos and stills from past gigs.
                     </p>
                 </div>
+                <div class="tile">
+                    <a href="https://replit.com/@lolisolera101/Songs-App?v=1" target="_blank"><img
+                            src="images/music-app.png" alt="screenshot of songs app" /></a>
+                    <h4>Songs App</h4>
+                    <p>
+                        This Python app features functions like the ability to view, add, update, and delete songs,
+                        along with report retrieval.
+                    </p>
+                </div>
+                <div class="tile">
+                    <a href="https://replit.com/@lolisolera101/Filmflix-Project?v=1" target="_blank"><img
+                            src="images/film.png" alt="screenshot of filmflix app" /></a>
+                    <h4>FilmFlix App</h4>
+                    <p>
+                        A Python application to manipulate the FilmFlix database. Users can add, delete, amend and print
+                        any film records they wish.
+                    </p>
+                </div>
+                <div class="tile">
+                    <a href="https://replit.com/@lolisolera101/Recipe-Book-App?v=1" target="_blank"><img
+                            src="images/recipe-book.png" alt="screenshot of recipe book app" /></a>
+                    <h4>Recipe Book App</h4>
+                    <p>
+                        I wrote this application in Python. It enables users to add, delete, update and print cooking
+                        recipes. There is also an option to view a report.
+                    </p>
+                </div>
             </div>
         </section>
 
