--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                 </div>
                 <div class="tile-skills">
-                    <img src="images/python.svg">
+                    <img class="python" src="images/python.svg">
 
                     <h4 class="python">Python</h4>
 
