--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
-                    <a href="simon-game/index.html"><img src="images/simon-game.png"
+                    <a href="simon-game/index.html" target="_blank"><img src="images/simon-game.png"
                             alt="screenshot of Simon game" /></a>
                     <h4>Simon game</h4>
                     <p>
@@ -139,7 +139,8 @@
                                 class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
-                    <a href="dice-game/index.html"><img src="images/dice-game.png" alt="screenshot of dice game" /></a>
+                    <a href="dice-game/index.html" target="_blank"><img src="images/dice-game.png"
+                            alt="screenshot of dice game" /></a>
                     <h4>Dice game</h4>
                     <p>
                         Simulates a simple two-player dice game where each player rolls a die, and the player with the
@@ -150,7 +151,8 @@
                                 class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
-                    <a href="drum-kit/index.html"><img src="images/drum-kit.png" alt="screenshot of drum kit app" /></a>
+                    <a href="drum-kit/index.html" target="_blank"><img src="images/drum-kit.png"
+                            alt="screenshot of drum kit app" /></a>
                     <h4>Drum kit</h4>
                     <p>
                         A virtual drum kit where users can either click on drum buttons or press corresponding keys to
@@ -186,8 +188,8 @@
                             src="images/music-app.png" alt="screenshot of songs app" /></a>
                     <h4>Songs App</h4>
                     <p>
-                        This Python app features functions like the ability to view, add, update, and delete songs,
-                        along with report retrieval.
+                        This Python app features various functions including the ability to view, add, update, and
+                        delete songs, along with report retrieval.
                     </p>
                 </div>
                 <div class="tile">
