updated cv and profile

--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
                     movies and performing visuals live using cutting-edge software.</p>
 
                 <p>Fueled by my enthusiasm for combining creativity with technology, I've been pursuing software
-                    development opportunities. This journey has culminated in the successful completion of a three-month
-                    coding course, elevating my skills to a professional level.</p>
+                    development opportunities. This journey has culminated in the successful completion of a 12-week
+                    bootcamp, elevating my skills to a professional level.</p>
 
-                <p>Presently engaged in the Software Development Skills Bootcamp at Just IT, I'm dedicated to expanding
-                    my technical proficiency. Eager to contribute to a dynamic and innovative company, I'm actively
-                    seeking a junior role to further enhance my experience.</p>
+                <p>Eager to contribute to a dynamic and innovative company, I'm actively seeking a junior role to put my expertise into practice.</p>
             </div>
         </section>
 
