--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                             alt="screenshot of drum kit app" /></a>
                     <h4>Drum kit</h4>
                     <p>
-                        A virtual drum kit where users can either click on drum buttons or press corresponding keys to
+                        A virtual drum kit where users can click on drum buttons or press keys to
                         produce drum sounds and visual animations.
-                        <br>
+                        <br><br>
                         Skills: HTML, CSS, JavaScript
                     </p>
                     <p>&nbsp;</p>
