--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
                             alt="screenshot of calculator app" /></a>
                     <h4>Calculator</h4>
                     <p>
-                        Provides the basic functionality of a calculator through a simple UI.
-                        <br><br><br>
+                        Provides the basic functionality of a calculator through a simple UI. Users can input numbers,
+                        perform basic operations, and see the results on the display.
+                        <br><br>
                         Skills: HTML, CSS, JavaScript
                     </p>
                     <p>&nbsp;</p>
@@ -131,8 +132,10 @@
                             alt="screenshot of Simon game" /></a>
                     <h4>Simon game</h4>
                     <p>
-                        Combines event handling, game logic, and UI animations.
-                        <br> <br><br><br>
+                        Combines event handling, game logic, and UI animations. Players need to repeat the
+                        computer-generated color sequence to advanced levels. The game resets when the player makes a
+                        mistake.
+                        <br> <br>
                         Skills: HTML, CSS, JavaScript
                     </p>
                     <p>&nbsp;</p>
