--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                     <h4>Calculator</h4>
                     <p>
                         Provides the basic functionality of a calculator through a simple UI. Users can input numbers,
-                        perform basic operations, and see the results on the display.
+                        and
+                        perform basic operations.
                         <br><br>
                         Skills: HTML, CSS, JavaScript
                     </p>
@@ -133,8 +134,7 @@
                     <h4>Simon game</h4>
                     <p>
                         Combines event handling, game logic, and UI animations. Players need to repeat the
-                        computer-generated color sequence to advanced levels. The game resets when the player makes a
-                        mistake.
+                        computer-generated color sequence to advanced levels.
                         <br> <br>
                         Skills: HTML, CSS, JavaScript
                     </p>
