--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                             alt="screenshot of Simon game" /></a>
                     <h4>Simon game</h4>
                     <p>
-                        Combines event handling, game logic, and UI animations. Players need to repeat the
-                        computer-generated color sequence to advanced levels.
+                        Combines event handling, game logic, and UI animations. The aim of the game is to repeat the
+                        computer-generated color sequence.
                         <br> <br>
                         Skills: HTML, CSS, JavaScript
                     </p>
