--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <h4>Songs App</h4>
                     <p>
                         This app features various functions including the ability to view, add, update, and
-                        delete songs, along with report retrieval.
+                        delete songs.
                         <br><br>
                         Skills: Python, MySQL
                     </p>
