--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             alt="screenshot of Simon game" /></a>
                     <h4>Simon game</h4>
                     <p>
-                        Combines event handling, game logic, and UI animations. The aim of the game is to repeat the
+                        Combines event handling, game logic, and UI animations. Players must repeat the
                         computer-generated color sequence.
                         <br> <br>
                         Skills: HTML, CSS, JavaScript
